Small fixes to font sizes and spacing

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -93,6 +93,7 @@
 
 	h5 {
 		font-size: 0.9em;
+		font-weight: normal;
 	}
 
 	h6 {
