--- a/src/assets/scss/components/_spotlights.scss
+++ b/src/assets/scss/components/_spotlights.scss
@@ -153,7 +153,7 @@
 				font-size: 100%;
 				font-weight: bold;
 				display: flex;
-				font-size: 18px;
+				font-size: 20px;
 			}
 			.talkAbstract{
 				font-size: 80%;
@@ -202,8 +202,9 @@
 				@include vendor('flex-direction', 'column');
 				@include vendor('justify-content', 'center');
 				@include vendor('align-items', 'center');
-				@include padding(2em, 3em);
+				@include padding(0.5em, 3em);
 				padding-left: 0;
+				padding-bottom: 2em;
 				width: 70%;
 
 				> .inner {
